# reefer

./: Cargo.toml  LICENSE  README.md  shell.nix
src/: basis.rs  cas.rs  collector.rs  field.rs  infix.rs  lib.rs  macros.rs  marker.rs  metric.rs  mvect.rs  parity.rs  pga2d.rs  sort.rs  traits.rs  vga3d.rs  vga6d.rs
src/basis/: abs.rs  add.rs  default.rs  display.rs  dual.rs  equality.rs  geo_prod.rs  grade.rs  into.rs  mod.rs  mul.rs  neg.rs  negations.rs
src/geometry/: blade.rs  mod.rs  mvect.rs  parse.rs  shape.rs
src/mvect/: add.rs  basis_set.rs  default.rs  display.rs  dual.rs  equality.rs  grade.rs  index.rs  into.rs  mod.rs  mul.rs  neg.rs
src/utils/: contains.rs  count.rs  mod.rs  parity.rs  reverse.rs  swap_parity.rs  typeset.rs
tests/: lorentz.rs  pga2d.rs
