[package]
name = "reefer"
version = "0.2.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
quote = "*"
syn = { version = "*", features = ["full", "extra-traits", "visit", "visit-mut"]}
proc-macro2 = { version= "*", features = ["span-locations"]}
prettyplease = "*"
itertools = "*"
cas-compute = "*"
cas-parser = "*"
rug = "*"
libm = "*"